fix(*): fix z-index for Modal and ModalOverlay

--- a/src/components/modal/styles.module.css
+++ b/src/components/modal/styles.module.css
@@ -8,7 +8,7 @@
     border-radius: 40px;
     display: flex;
     flex-direction: column;
-    z-index: 1;
+    z-index: 100;
 }
 
 .modal-heading {
